# instruction_serialiser

./: README.md
dart/: .gitignore  README.md  generate_code.sh  pubspec.yaml
dart/lib/: instruction_serialiser.dart
dart/test/: instruction_serialiser_test.dart
definition/: instruction_serialiser.proto
go/: README.md  generate_code.sh  go.mod
go/instruction_serialiser/: add_node.go  and_node.go  arithmetic_if_else_node.go  arithmetic_node.go  arithmetic_result_node_wrapper.go  arithmetic_type.go  arithmetic_variable_node.go  bool_node.go  divide_node.go  equal_node.go  greater_than_node.go  greater_than_or_equal_node.go  instruction_serialiser.pb.go  instruction_wrapper.go  logarithm_node.go  (+16 more)
rust/: Cargo.toml  README.md  build.rs  definition_paths.toml  publish.sh
rust/.cargo/: config.toml
rust/src/: add_node.rs  and_node.rs  arithmetic_if_else_node.rs  arithmetic_result_node_wrapper.rs  arithmetic_type.rs  arithmetic_variable_node.rs  bool_node.rs  calculation_error.rs  divide_node.rs  equal_node.rs  generic_node.rs  greater_than_node.rs  greater_than_or_equal_node.rs  instruction_wrapper.rs  lib.rs  logarithm_node.rs  logical_if_else_node.rs  logical_result_node_wrapper.rs  logical_type.rs  logical_variable_node.rs  modulo_node.rs  multiply_node.rs  negate_node.rs  node_wrapper.rs  number_node.rs  or_node.rs  parameter.rs  power_node.rs  serialisation_error.rs  smaller_than_node.rs  smaller_than_or_equal_node.rs  subtract_node.rs  xor_node.rs
typescript/: .eslintrc.json  generate_code.sh  jestconfig.json  package-lock.json  package.json  tsconfig.json
(+43 files in other folders)
