[package]
name = "instruction_serialiser"
version = "0.0.6"
edition = "2021"
license = "Apache-2.0"
description = "This package helps developers serialising calculation instructions for reusing or archiving them."
repository = "https://github.com/nico151999/instruction_serialiser/tree/main/rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
prost = "0.9.0"

[build-dependencies]
prost-build = "0.9.0"
config = "0.12.0"
